fixed blurry image and backed up database

--- a/html/lizdeanconsultancy.co.uk/assets/scss/styles.scss
+++ b/html/lizdeanconsultancy.co.uk/assets/scss/styles.scss
@@ -574,7 +574,7 @@ figure {
 }
 
 .textbox img {
-  width: 37%;
+  max-width: 37%;
   float: left;
   padding-right: 25px;
 }
